transparent-proxy/backend-tp.yaml
# Service to expose backend-tp
apiVersion: v1
kind: Service
metadata:
  name: backend-tp
spec:
  selector:
    app: backend-tp
  ports:
  - name: http
    protocol: TCP
    port: 9091
    targetPort: 9091
---
# deployment for backend-tp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-tp
  labels:
    app: backend-tp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-tp
  template:
    metadata:
      labels:
        app: backend-tp
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/transparent-proxy": "true"
    spec:
      serviceAccountName: backend-tp
      containers:
      - name: backend-tp
        image: nicholasjackson/fake-service:v0.22.4
        ports:
        - containerPort: 9091
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
