transparent-proxy/frontend-tp.yaml
# Service to expose frontend-tp
apiVersion: v1
kind: Service
metadata:
  name: frontend-tp
spec:
  selector:
    app: frontend-tp
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
# frontend-tp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-tp
  labels:
    app: frontend-tp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-tp
  template:
    metadata:
      labels:
        app: frontend-tp
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/transparent-proxy": "true"
    spec:
      serviceAccountName: frontend-tp
      containers:
      - name: frontend-tp
        image: nicholasjackson/fake-service:v0.22.4
        ports:
        - containerPort: 9090
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
