transparent-proxy/api-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: frontend-tp-route
spec:
  parentRefs:
  - name: example-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /frontend-tp
    backendRefs:
    - kind: Service
      name: frontend-tp
      namespace: default
      port: 9090
